--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "expo": "~44.0.0",
+    "expo-clipboard": "~2.1.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.2",
     "prop-types": "^15.8.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-swipe-cards-deck": "https://github.com/foobarsik/react-native-swipe-cards-deck.git",
-    "react-native-web": "0.17.1",
-    "expo-clipboard": "~2.1.0"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
