--- a/app.json
+++ b/app.json
@@ -8,10 +8,13 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#2e2d3d"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
+    },
+    "packagerOpts": {
+      "sourceExts": [ "js", "json", "ts", "tsx", "jsx", "vue"]
     },
     "assetBundlePatterns": [
       "**/*"
