--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@shopify/restyle": "^1.6.1",
     "expo": "~44.0.0",
     "expo-clipboard": "~2.1.0",
+    "expo-constants": "^13.0.1",
+    "expo-localization": "~12.0.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.2",
+    "i18n-js": "^3.8.0",
+    "i18next": "^21.6.11",
+    "lodash.memoize": "^4.1.2",
     "prop-types": "^15.8.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-i18next": "^11.15.4",
     "react-native": "0.64.3",
+    "react-native-collapsible": "^1.6.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-swipe-cards-deck": "https://github.com/foobarsik/react-native-swipe-cards-deck.git",
